# flag-football-tracker

./: .gitignore  config.py  pyproject.toml
annotation/: api.py  db.py
backend/: config.py  db.py  deps.py  main.py  pyproject.toml
backend/agent/: claude_agent.py  tools.py
backend/annotation/: api.py  db.py
backend/annotation/static/: index.html
backend/auth/: models.py  router.py  service.py
backend/games/: models.py  router.py  service.py
backend/pipeline/: worker.py
backend/scripts/: smoke_test.py  track.py  visualize.py
backend/tracking/: homography.py  pipeline.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/games/[gameId]/: page.tsx
frontend/app/games/[gameId]/annotate/: page.tsx
frontend/app/games/new/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: TopNav.tsx
frontend/components/annotation/: AnnotationViewer.tsx  EventPanel.tsx  JerseyPopup.tsx  PlayerPanel.tsx  TimelineCanvas.tsx  VideoCanvas.tsx  useAnnotation.ts
frontend/components/auth/: LoginForm.tsx
frontend/components/games/: CreateGameStepper.tsx  GameCard.tsx  GameStatusBadge.tsx
frontend/components/games/steps/: Step1Metadata.tsx  Step2Upload.tsx  Step3Processing.tsx
frontend/lib/: api.ts  constants.ts
scripts/: calibrate.py
tracking/: db.py  homography.py  pipeline.py
