[project]
name = "flag-football-tracker"
version = "0.1.0"
description = "IFAF flag football player tracking and event annotation"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.2",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.28",
    "lap>=0.5.12",
]

[project.scripts]
calibrate = "scripts.calibrate:main"
track = "scripts.track:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracking", "annotation", "agent", "scripts"]
